--- a/MDK-ARM/FlashLight/FlashLight.build_log.htm
+++ b/MDK-ARM/FlashLight/FlashLight.build_log.htm
@@ -26,6 +26,10 @@ Project File Date:  06/19/2019
 
 <h2>Output:</h2>
 Build target 'FlashLight'
+compiling stm32f0xx_it.c...
+linking...
+Program Size: Code=9608 RO-data=784 RW-data=28 ZI-data=2380  
+FromELF: creating hex file...
 "FlashLight\FlashLight.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
